--- a/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
+++ b/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
@@ -124,5 +124,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\cancel.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
