Se  implemento patron Factory, Se hizo de nuevo la BD con su nuevo BACKUP(Revisar) se trabajo desde el lado Controller Cliente

--- a/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
+++ b/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
@@ -187,6 +187,8 @@
     <Compile Include="Controller\CUser.cs" />
     <Compile Include="Controller\CClientes.cs" />
     <Compile Include="Controller\CVehiculos.cs" />
+    <Compile Include="Controller\Factory\Fabrica.cs" />
+    <Compile Include="Controller\Factory\IAcciones.cs" />
     <Compile Include="Model\DClientes.cs" />
     <Compile Include="Model\DMantenimientos.cs" />
     <Compile Include="Model\DMecanicos.cs" />
