--- a/C#/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
+++ b/C#/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
@@ -208,6 +208,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\SetTables\Asignar\Repuesto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SetTables\Asignar\Repuesto.Designer.cs">
+      <DependentUpon>Repuesto.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\SetTables\Mantenimientos\Mantenimiento.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -297,6 +303,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SetTables\Asignar\Repuesto.resx">
+      <DependentUpon>Repuesto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\SetTables\Mantenimientos\Mantenimiento.resx">
       <DependentUpon>Mantenimiento.cs</DependentUpon>
