--- a/C#/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
+++ b/C#/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
@@ -208,11 +208,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="View\SetTables\Asignar\Repuesto.cs">
+    <Compile Include="View\SetTables\Mantenimientos\AsignarRepuestos\Repuesto.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\SetTables\Asignar\Repuesto.Designer.cs">
+    <Compile Include="View\SetTables\Mantenimientos\AsignarRepuestos\Repuesto.Designer.cs">
       <DependentUpon>Repuesto.cs</DependentUpon>
+    </Compile>
+    <Compile Include="View\SetTables\Mantenimientos\Historial\Historial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SetTables\Mantenimientos\Historial\Historial.Designer.cs">
+      <DependentUpon>Historial.cs</DependentUpon>
     </Compile>
     <Compile Include="View\SetTables\Mantenimientos\Mantenimiento.cs">
       <SubType>Form</SubType>
@@ -292,10 +298,10 @@
     <Compile Include="View\SubViews\UserMenuStrip.Designer.cs">
       <DependentUpon>UserMenuStrip.cs</DependentUpon>
     </Compile>
-    <Compile Include="View\Tablas\ShowTable.cs">
+    <Compile Include="View\ShowTables\ShowTable.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="View\Tablas\ShowTable.Designer.cs">
+    <Compile Include="View\ShowTables\ShowTable.Designer.cs">
       <DependentUpon>ShowTable.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Properties\licenses.licx" />
@@ -304,8 +310,11 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\SetTables\Asignar\Repuesto.resx">
+    <EmbeddedResource Include="View\SetTables\Mantenimientos\AsignarRepuestos\Repuesto.resx">
       <DependentUpon>Repuesto.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SetTables\Mantenimientos\Historial\Historial.resx">
+      <DependentUpon>Historial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\SetTables\Mantenimientos\Mantenimiento.resx">
       <DependentUpon>Mantenimiento.cs</DependentUpon>
@@ -346,7 +355,7 @@
     <EmbeddedResource Include="View\SubViews\UserMenuStrip.resx">
       <DependentUpon>UserMenuStrip.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="View\Tablas\ShowTable.resx">
+    <EmbeddedResource Include="View\ShowTables\ShowTable.resx">
       <DependentUpon>ShowTable.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
