--- a/C#/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
+++ b/C#/ServiPlusApp/ServiPlusApp/ServiPlusApp.csproj
@@ -180,6 +180,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\CAsignarRepuestos.cs" />
     <Compile Include="Controller\CMantenimientos.cs" />
     <Compile Include="Controller\CMecanicos.cs" />
     <Compile Include="Controller\CRepuestos.cs" />
@@ -191,6 +192,7 @@
     <Compile Include="Controller\Factory\IAcciones.cs" />
     <Compile Include="Enums\Estados.cs" />
     <Compile Include="Enums\TiposDeMantenimientos.cs" />
+    <Compile Include="Model\DAsignarRepuestos.cs" />
     <Compile Include="Model\DClientes.cs" />
     <Compile Include="Model\DMantenimientos.cs" />
     <Compile Include="Model\DMecanicos.cs" />
@@ -208,6 +210,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\SetTables\Mantenimientos\AsignarRepuestos\Buscador\Buscador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\SetTables\Mantenimientos\AsignarRepuestos\Buscador\Buscador.Designer.cs">
+      <DependentUpon>Buscador.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\SetTables\Mantenimientos\AsignarRepuestos\Repuesto.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -309,6 +317,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="View\SetTables\Mantenimientos\AsignarRepuestos\Buscador\Buscador.resx">
+      <DependentUpon>Buscador.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="View\SetTables\Mantenimientos\AsignarRepuestos\Repuesto.resx">
       <DependentUpon>Repuesto.cs</DependentUpon>
